dev-auth-server: implement bearer auth for Get
